# re-bind

./: Cargo.toml  gfaestus_ex.rhai
src/: automata.rs  binds.rs  lib.rs  main.rs
src/automata/: dsl.rs  example.rhai
