[package]
name = "rmap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.23.0"
strum_macros = "0.23.0"
sdl2 = "0.35.1"
crossbeam = "0.8"

parking_lot = "0.11.1"
rayon = "1.5"
futures = { version = "0.3", features = ["thread-pool"] }
futures-timer = { version = "3.0.2" }

rgb = "0.8.25"
colorous = "1.0.5"

nalgebra = "0.24"
nalgebra-glm = "0.10"


lazy_static = "1.4.0"
anyhow = "1.0"

rustc-hash = "1.1"

bstr = "0.2"

rhai = { version = "1.0.1", features = ["sync", "f32_float", "metadata", "internals"] }

bytemuck = { version = "1.7", features = ["derive"] }

num_cpus = "1.13.0"

log = "0.4"
flexi_logger = { version = "0.18", features = ["async"] }
argh = "0.1.5"

rand = "0.8"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }